--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,27 +1,120 @@
+@font-face {
+    font-family: 'Signika';
+    src: url('/Fuentes/Signika_Negative/static/SignikaNegative-Bold.ttf') format('truetype');
+  }
+
 .aboutme{
     margin: 0%;
+    margin-top: 60px;
     padding: 0%;
-}
-
-.aboutme img{
-    width: 100%;
-    position: absolute;
-    z-index: -1;
-    top: 60px;
+    background-color: white;
 }
 
 .title-presentation{
-    font-family: 'Pixelify Sans', sans-serif;
     padding: 0%;
     margin: 0;
-    
     padding-left: 20px;
+    text-align: center;
+    align-items: center;
 }
 
+
+
 .title-presentation p{
-    font-weight: 700;
-    font-size: 48px;
+    font-family: 'Signika', sans-serif;
+    font-size: 78px;
+    color: var(--color3);
+    
 }
+
+.photo-computer{
+    padding: 20px;
+    
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    height: 445px;
+    
+}
+.photo-computer img{
+    width: 100%;
+    max-width: 400px;
+}
+
+.presentation{
+    
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+}
+
+.etiqueta{
+    background-color: var(--color5);
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 2px 10px var(--color4);
+
+}
+
+.presentation p{
+    word-wrap: break-word;
+    font-size: 22px;
+    padding: 15px;
+    text-align: center;
+    color: rgb(80, 80, 80);
+   
+    
+}
+
+.presentation img{
+    border-radius: 100%;
+    min-width: 150px;
+    
+    margin: 15px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.498);
+    
+}
+
+
+@media only screen and  (max-width:998px) {
+    .title-presentation p{
+        font-size: 60px;
+    }
+    .photo-computer{
+        height: 345px;
+        
+    }
+    .presentation{
+        height: ;
+    }
+}
+
+@media only screen and (max-width:768px) {
+    .title-presentation p{
+        font-size: 50px;
+
+    }
+
+    .presentation{
+        height: 900px;
+    }
+
+    .presentation img{
+        width: 100%;
+        max-width: 250px;
+    }
+
+    .etiqueta{
+        flex-direction: column;
+    }
+
+
+}
+
 
 
 
