--- a/css/skills.css
+++ b/css/skills.css
@@ -24,7 +24,7 @@
 
 .skills-container p{
     font-size: 34px;
-    font-family: 'Signika';
+    font-family: 'Signika-regular';
     color: white;
     
 }
@@ -53,7 +53,7 @@
 
 .skill-icon span{
     margin-top: 5px;
-    font-family: 'Signika';
+    font-family: 'Signika-regular';
     font-size: 18px;
     color: white;
 }
@@ -92,6 +92,6 @@
 
 
 @font-face {
-    font-family: 'Signika';
-    src: url('/Fuentes/SignikaNegative-Bold.ttf') format('truetype');
+    font-family: 'Signika-regular';
+    src: url('fuentes/Signika_Negative/static/SignikaNegative-Regular.ttf') format('truetype');
   }
