--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,7 +1,4 @@
-@font-face {
-    font-family: 'Signika';
-    src: url('fuentes/Signika_Negative/static/SignikaNegative-Bold.ttf') format('truetype');
-  }
+
 
 .aboutme{
     margin: 0%;
@@ -14,6 +11,7 @@
     padding: 0%;
     margin: 0;
     padding-left: 20px;
+    padding-right: 20px;
     text-align: center;
     align-items: center;
 }
@@ -21,10 +19,10 @@
 
 
 .title-presentation p{
-    font-family: 'Signika', sans-serif;
+    font-family: 'Signika Negative', sans-serif;
+    font-weight: 700;
     font-size: 78px;
     color: var(--color3);
-    
 }
 
 .photo-computer{
@@ -88,9 +86,7 @@
         height: 345px;
         
     }
-    .presentation{
-        height: ;
-    }
+
 }
 
 @media only screen and (max-width:768px) {
