--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,26 @@ body{
     background-color: rgb(43, 43, 43);
 }
 
-
+.container::-webkit-scrollbar{
+    width: 0px;
+}
 
 @media only screen and (min-width: 1200px){
+    
+    .navbar{
+        border-radius: 13px 13px 0px 0px;
+    }
+
+
+    
     .container{
-        margin-top: 10px;
-        
+        margin-top: 10PX;
+        height: 97vh;
+        border-radius: 15px;
+        background-color: brown;
+        overflow: hidden;
+        overflow: auto;
+        box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.424);
     }
 }
     
