--- a/css/common.css
+++ b/css/common.css
@@ -3,15 +3,14 @@
 
 * {
     box-sizing: border-box;
-    font-family: 'Rubik'
+    font-family: 'Signika Negative', sans-serif;
 }
 
 html,
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Rubik', sans-serif;
+    font-family:'Signika Negative', sans-serif;
 }
 
 a{
@@ -23,6 +22,33 @@ a{
 a:hover{
     color: var(--color4);
     transition: 0.18s;
+}
+.javascript {
+    background-color: rgba(245, 247, 101, 0.661);
+}
+
+.html {
+    background-color: rgba(232, 119, 27, 0.776);
+}
+
+.css {
+    background-color: rgba(78, 148, 205, 0.582);
+}
+
+.java {
+    background-color: rgba(255, 255, 255, 0.693);
+}
+
+.mysql {
+    background-color: rgba(164, 228, 179, 0.427);
+}
+
+.bootstrap {
+    background-color: rgba(118, 33, 198, 0.429);
+}
+
+.unity {
+    background-color: rgba(93, 93, 93, 0.391);
 }
 
 
