--- a/css/navbar.css
+++ b/css/navbar.css
@@ -12,6 +12,7 @@
     box-shadow: 0px 2px 4px var(--color3);
     position: fixed;
     max-width: 1200px;
+    z-index: 2;
 }
 
 .logo{
@@ -50,6 +51,7 @@
 .index a{
     white-space: nowrap;
     color: white;
+    font-size: 20px;
 }
 
 .index a:hover{
@@ -60,13 +62,13 @@
 
 @media only screen and (max-width: 768px) {
     .index a{
-    font-size: 14px;
+    font-size: 17px;
     }
 }
 
 @media only screen and (max-width: 600px) {
     .index a{
-    font-size: 10px;
+    font-size: 15px;
     
     }
 
