--- a/css/common.css
+++ b/css/common.css
@@ -50,6 +50,14 @@ a:hover{
 .unity {
     background-color: rgba(93, 93, 93, 0.391);
 }
-
+.github{
+    background-color: rgb(227, 227, 227);
+}
+.git{
+    background-color: rgba(250, 169, 38, 0.878);
+}
+.autocad{
+    background-color: rgba(251, 94, 94, 0.886);
+}
 
 
