--- a/css/skills.css
+++ b/css/skills.css
@@ -11,10 +11,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--color4);
+    background-color: aliceblue;
     margin: 50px 0;
     border-radius: 15px;
-    box-shadow: 0px 3px 5px var(--color3);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.244);
     padding: 20px;
 }
 
@@ -27,7 +27,7 @@
     font-size: 34px;
     font-family: 'Signika Negative', sans-serif;
     font-weight: 600;
-    color: white;
+    color: rgb(0, 0, 0);
     margin: 0;
     margin-top: -5px;
     margin-bottom: 25px;
@@ -61,7 +61,7 @@
     font-family: 'Signika Negative', sans-serif;
     font-weight: 400;
     font-size: 18px;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .padding-img {
