--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -2,7 +2,7 @@
 
 .aboutme{
     margin: 0%;
-    margin-top: 60px;
+    
     padding: 0%;
     background-color: white;
 }
@@ -14,6 +14,7 @@
     padding-right: 20px;
     text-align: center;
     align-items: center;
+    margin-top: 60px;
 }
 
 
@@ -41,7 +42,7 @@
 
 .presentation{
     
-    height: 400px;
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,12 +50,13 @@
 }
 
 .etiqueta{
-    background-color: var(--color5);
+    background-color: rgb(64, 226, 255);
     border-radius: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0px 2px 10px var(--color4);
+    margin-top: 70px;
 
 }
 
@@ -95,9 +97,6 @@
 
     }
 
-    .presentation{
-        height: 900px;
-    }
 
     .presentation img{
         width: 100%;
