--- a/css/contact.css
+++ b/css/contact.css
@@ -4,8 +4,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    
+    
 
 }
 
@@ -132,6 +132,8 @@
     font-family: 'Signika Negative';
     font-size: 16px;
     font-weight: 700;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.401);
+    cursor: pointer;
 }
 
 
