--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import "skills.css";
 @import "projects.css";
 @import "contact.css";
+@import "footer.css";
 
 .includes{
     width: 100%;
@@ -12,6 +13,13 @@
 
 body{
     background-color: rgb(43, 43, 43);
+}
+
+.row{
+    display: flex;
+    flex-direction: column;
+    gap: 70px;
+    background-color: white;
 }
 
 .container::-webkit-scrollbar{
@@ -34,6 +42,12 @@ body{
         overflow: hidden;
         overflow-y: auto;
         box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.424);
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .row{
+        gap: 150px;
     }
 }
     
